examples/errors/syntax_errors/return.sgl
return 5;
return 10;